framing docs as secondary stimuli

--- a/_posts/thesis_chapters/2023-12-4-Design.md
+++ b/_posts/thesis_chapters/2023-12-4-Design.md
@@ -1003,12 +1003,6 @@ The use of a starting template was inline with core motivations of UMC technique
 <!-- At the use and modify stage, knowledge of very few coding concepts were essential. It useful to compare this to a typical process of learning to code in a text language from first principles where the learner is met with a great many new concepts in the process of being guided to construct even the most basic of programs.  Thus, while some basic alterations are being made, this stage of learning design aligns most closely with the _Use_ stage of the UMC model (see lit review/ glossary) [@lee_computational_2011].    -->
 
 
-
-
-
-
-
-
 <!-- The partially working environment and immediate feedback this allowed also gave rapid access access to varied forms of face to face community activity including varied forms of playtesting and social interaction and ways to access help from peers and facilitators.
 While Scratch has an extensive online community allowing for remixing and showcasing of games,  the community element of the design are not is explored in this section. See instead chapter six. -->
 <!-- While, initially conceived as a starting activity, many learners stuck with those possibilities for a long period of time. -->
@@ -1053,20 +1047,13 @@ DEVELOP THIS SECTION -->
 
 ## 4. Participant conflict associated with project navigation and use of documentation
 
+This section details a conflict where participants, frequently wanted to add new features or changes to their game but were not clear how to implement them. In P1 this caused delays and participant frustration, as although I could work with people directly to help them I had limited time with each participant or pair. The inability for participants progress due to lack of game and coding practices was compounded in early stages by little or no supporting documentation or supporting resources. This section outlines the evolutions and design choices informing the different forms of supporting documentation used to address this conflict.
 
-While the previous section outlined responses to a conflict experienced by partcipants in address a challenge to getting started, this section details a conflict which took place when game making was underway. Participants, frequently knew what new features or changes the wanted to add to the game but were not clear on what computer code was needed to implement it. This cause delays and participant frustration, as although I could work with people directly to help them I had limited time with each participant or pair.  
+Before addressing the detail of the learning design it is helpful to contrast both documentation with the use of tools and templates explored previously.  
 
-Some interpretations of double stimulation see the problem task as the first stimulus, and means based tools as a second stimuli.
-Lund [-@lund_right_2008-1] stresses the importance of multiple stimuli in the process open to learners outside of lab settings.  Similarly, Sannino highlights the volitional aspect of the process of double stimulation in authentic settings to thus shed light on participants expression of agency. While the affordances built into the code playground are valid secondary stimuli in initial in helping to seed initial activity, supporting documentation can be seen as a form of secondary stimulation more aligned to the process of building agency.
+EXPAND -
+Some interpretations of double stimulation see the problem task as the first stimulus, and means based tools as a second stimuli. Lund [-@lund_right_2008-1] stresses the importance of multiple stimuli in the process open to learners outside of lab settings.  Similarly, Sannino highlights the volitional aspect of the process of double stimulation in authentic settings to thus shed light on participants expression of agency. While the affordances built into the code playground are valid secondary stimuli in initial in helping to seed initial activity, supporting documentation can be seen as a form of secondary stimulation more aligned to the process of building agency.
 
-The inability for participants progress due to lack of game and coding practices was compounded in early stages by little or no supporting documentation or supporting resources. Analysis of video data showed that adult participants were aware of the limited time that I could give each group and that this resulted in them restricting how often they or their kids asked for direct help. This section outlines the evolutions and design choices informing the different forms of supporting documentation used to address this conflict.
-
-To support the use of the staring processes outlined above, at the end of P1 I asked trainee computing teachers in my faculty to create printable resources that highlighted the key lines of code in an way that linked to game behaviour. I called these quick start cards (see figure 4.x below).
-
-![](./Pictures/velocity_jscard.png){width=95%}
-4.x - Example of a Quick start card
-
-To address this use of time I developed more extensive help files and documentation as there were not enough facilitators. The next section outlines the different forms of documentation created.   
 
 <!-- I wavered between the use of a technical variable name or one more closely linked to the behaviour in the game. For example, I trialled replacing velocity_x and y with playerMoveSpeed and playerJumpSpeed. I returned to velocity x and y as they are important concepts in physics and wider science, here prioritising the more abstract representation based on experiences of participants not getting overwhelmed or stuck on this use of language, quickly forming habits to alter them. I evaluated that more is gained than lost in this design choice. -->
 
@@ -1082,6 +1069,12 @@ To address this use of time I developed more extensive help files and documentat
 <!-- Longer form step by step tutorials are common in computing education. Examples can be found in Code Academy, and in the education resources of RPi foundation. Many examples talking learners through steps to build a game can be found online with varied amount of explanation of underlying constructs and concepts. I started my journey learning JS games using some provided
 by Mozilla and the Phaser developers. -->
 
+#### Quick Start Cards
+
+To support the use of the staring processes outlined above, at the end of P1 I asked trainee computing teachers in my faculty to create printable resources that highlighted the key lines of code in an way that linked to game behaviour. I called these quick start cards (see figure 4.x below).
+
+![](./Pictures/velocity_jscard.png){width=95%}
+4.x - Example of a Quick start card
 
 #### Code snippet examples
 To support a hands-on approach and responding the design choices of participants, I began by creating discreet code examples illustrating the requested elements. As explored in the literature review (check this), the use of code examples or snippets in code playgrounds is a common professional problem solving practice. These code examples allow users to see the behaviour in context with the code and output side by side. While code examples existed on the Phaser website, their use there is not consistent or structured for novices.
