--- a/_posts/thesis_chapters/2023-12-4-Design.md
+++ b/_posts/thesis_chapters/2023-12-4-Design.md
@@ -1047,9 +1047,7 @@ DEVELOP THIS SECTION -->
 
 ## 4. Participant conflict associated with project navigation and use of documentation
 
-This section details a conflict where participants, frequently wanted to add new features or changes to their game but were not clear how to implement them. In P1 this caused delays and participant frustration, as although I could work with people directly to help them I had limited time with each participant or pair. The inability for participants progress due to lack of game and coding practices was compounded in early stages by little or no supporting documentation or supporting resources. This section outlines the evolutions and design choices informing the different forms of supporting documentation used to address this conflict.
-
-Before addressing the detail of the learning design it is helpful to contrast both documentation with the use of tools and templates explored previously.  
+This section details a conflict where participants, frequently wanted to add new features or changes to their game but were not clear how to implement them. In P1 this caused delays and participant frustration, as although I could work with people directly to help them I had limited time with each participant or pair. The inability for participants progress due to lack of game and coding practices was compounded in early stages by little or no supporting documentation or supporting resources. This section outlines the evolutions and design choices informing the different forms of supporting documentation used to address this conflict. Before addressing the detail of the learning design it is helpful to contrast both documentation with the use of tools and templates explored previously.  
 
 EXPAND -
 Some interpretations of double stimulation see the problem task as the first stimulus, and means based tools as a second stimuli. Lund [-@lund_right_2008-1] stresses the importance of multiple stimuli in the process open to learners outside of lab settings.  Similarly, Sannino highlights the volitional aspect of the process of double stimulation in authentic settings to thus shed light on participants expression of agency. While the affordances built into the code playground are valid secondary stimuli in initial in helping to seed initial activity, supporting documentation can be seen as a form of secondary stimulation more aligned to the process of building agency.
