--- a/_posts/thesis_chapters/2023-12-4-Design.md
+++ b/_posts/thesis_chapters/2023-12-4-Design.md
@@ -1075,7 +1075,8 @@ To support the use of the staring processes outlined above, at the end of P1 I a
 4.x - Example of a Quick start card
 
 #### Code snippet examples
-To support a hands-on approach and responding the design choices of participants, I began by creating discreet code examples illustrating the requested elements. As explored in the literature review (check this), the use of code examples or snippets in code playgrounds is a common professional problem solving practice. These code examples allow users to see the behaviour in context with the code and output side by side. While code examples existed on the Phaser website, their use there is not consistent or structured for novices.
+
+To support a hands-on approach and responding the design choices of participants, I began by creating discreet code examples illustrating the requested elements. As explored in the literature review (check this), the use of code examples or snippets in code playgrounds is a common professional problem solving practice. These code examples allow users to see the behaviour in context with the code and output side by side. While code examples existed on the Phaser website, their use there, in line with other support sites like stack exchange [@treude_understanding_2017], has limitations inlcuding lack of relevant, consistency and not being structured in a self explanatory way.
 
 I initially encouraged participants to search within these examples, and authentic documentation documentation and help forums  used by both professional and amateur users of the Phaser javascript library [^11]. Unfortunately, when participants began this process significant additional tensions and confusions emerged. As with many developer created documentation, these demonstrated the code constructs in isolation rather than in the context of any particular game.
 
