--- a/_posts/thesis_chapters/2023-12-4-Design.md
+++ b/_posts/thesis_chapters/2023-12-4-Design.md
@@ -1047,10 +1047,13 @@ DEVELOP THIS SECTION -->
 
 ## 4. Participant conflict associated with project navigation and use of documentation
 
-This section details a conflict where participants, frequently wanted to add new features or changes to their game but were not clear how to implement them. In P1 this caused delays and participant frustration, as although I could work with people directly to help them I had limited time with each participant or pair. The inability for participants progress due to lack of game and coding practices was compounded in early stages by little or no supporting documentation or supporting resources. This section outlines the evolutions and design choices informing the different forms of supporting documentation used to address this conflict. Before addressing the detail of the learning design it is helpful to contrast both documentation with the use of tools and templates explored previously.  
+This section details a conflict where participants, frequently wanted to add new features or changes to their game but were not clear how to implement them. In P1 this caused delays and participant frustration, as although I could work with people directly to help them I had limited time with each participant or pair. The inability for participants progress due to lack of game and coding practices was compounded in early stages by little or no supporting documentation or supporting resources. This section outlines the evolutions and design choices informing the different forms of supporting documentation used to address this conflict. The process of creating documentation which created enough support for users to be able complete coding tasks but also facilitated participants to choose their on path presented significant challenges. 
+
+<!-- Before addressing the detail of the learning design it is helpful to contrast both documentation with the use of tools and templates explored previously.   -->
 
 EXPAND -
 Some interpretations of double stimulation see the problem task as the first stimulus, and means based tools as a second stimuli. Lund [-@lund_right_2008-1] stresses the importance of multiple stimuli in the process open to learners outside of lab settings.  Similarly, Sannino highlights the volitional aspect of the process of double stimulation in authentic settings to thus shed light on participants expression of agency. While the affordances built into the code playground are valid secondary stimuli in initial in helping to seed initial activity, supporting documentation can be seen as a form of secondary stimulation more aligned to the process of building agency.
+
 
 
 <!-- I wavered between the use of a technical variable name or one more closely linked to the behaviour in the game. For example, I trialled replacing velocity_x and y with playerMoveSpeed and playerJumpSpeed. I returned to velocity x and y as they are important concepts in physics and wider science, here prioritising the more abstract representation based on experiences of participants not getting overwhelmed or stuck on this use of language, quickly forming habits to alter them. I evaluated that more is gained than lost in this design choice. -->
@@ -1069,34 +1072,31 @@ by Mozilla and the Phaser developers. -->
 
 #### Quick Start Cards
 
-To support the use of the staring processes outlined above, at the end of P1 I asked trainee computing teachers in my faculty to create printable resources that highlighted the key lines of code in an way that linked to game behaviour. I called these quick start cards (see figure 4.x below).
+To address the limit of one-to-one facilitator support to seed the starting processes outlined in the section above, I used printable resources which highlighted the key lines of code and how they can be altered to impact on game behaviour(see figure 4.x below). These _quick start_ cards provoked a strongly scaffolded initial interaction with the code in a way strongly aligned with the use and modify stages of the UMC framework [@franklin_analysis_2020].
 
 ![](./Pictures/velocity_jscard.png){width=95%}
 4.x - Example of a Quick start card
 
+The quick start cares were created at the end of P1 by trainee computing teachers in my faculty who volunteered to support a holiday outreach event for young people. I developed them by theming them into starting level, next level and boss level. Participants were encouraged to pick a card based on their interest and difficulty level.  
+
 #### Code snippet examples
 
-To support a hands-on approach and responding the design choices of participants, I began by creating discreet code examples illustrating the requested elements. The use of code examples or snippets in code playgrounds is a common professional problem solving practice [@yang_stack_2017]. These code examples allow users to see the behaviour in context with the code and output side by side. While code examples existed on the Phaser website, their use there, in line with other support sites like stack exchange [@treude_understanding_2017], has limitations inlcuding lack of relevant, consistency and not being structured in a self explanatory way.
+To support a hands-on approach and responding the design choices of participants, I began by creating discreet code examples illustrating the requested elements. The use of code examples or snippets in code playgrounds is a common professional problem solving practice [@yang_stack_2017]. These code examples allow users to see the behaviour in context with the code and output side by side. While code examples existed on the Phaser website and support forums, in line with other support sites like stack exchange, their utility has limitations including lack of relevant, consistency, being removed from the domain context, and not being structured in a self explanatory way [@treude_understanding_2017]. Thus, while I initially encouraged participants to search within these examples, and authentic documentation and help forums  [^11], the resulting confusion and difficulties experienced by participants, prompted me to create other more bespoke documentation.  
 
-I initially encouraged participants to search within these examples, and authentic documentation documentation and help forums  used by both professional and amateur users of the Phaser javascript library [^11]. Unfortunately, when participants began this process significant additional tensions and confusions emerged. As with many developer created documentation, these demonstrated the code constructs in isolation rather than in the context of any particular game.
+<!-- The competency to overlook the concrete differences in code structure to abstract the principles away and to then apply those principles to the existing structure of their code project seemed too ambitious for this group of novices. -->
 
-In P1 I observed participants struggling with confusions about code structures and syntax when trying to apply examples. The competency to overlook the concrete differences in code structure to abstract the principles away and to then apply those principles to the existing structure of their code project seemed too ambitious for this group of novices.
-
-Initially, I responded by creating one off documents with the relevant code which needed to be copied and pasted into their game[^12]. This seemed also unsatisfactory as the documents were disconnected in a google drive document with no navigation to link between the game or between resources. It was not clear at this point how best to signpost how the code listed fit within the existing structure.
-
-<!-- To help students see the code in the correct structure, I began to create code snippets within code playgrounds and distinct project. These projects shared the structure of starter game template and added only the code needed for the additional requested functionality. My rationale was that each pattern added builds familiarity with the code structure. Feedback from P1 and video evidence as in Toby's proficiency supports this observation. -->
+In P1 I responded by creating one off documents with the relevant code which were both printed, emailed and shared via google drive. In line with the practice of accessing help via code snippets, the code examples could be to be copied and pasted into the game. This process lacked coherent process for participants to navigation to the resource they need. The process also lacked a consistency in signposting how the code listed fit within the existing structure. To help students see the code in the correct structure, I began to create code snippets within code playgrounds and distinct project. These projects shared the structure of starter game template and added only the code needed for the additional requested functionality. My rationale was that each pattern added builds familiarity with the code structure, a theory supported by observations of Toby's proficiency in the vignette above.
 
 
 #### Structuring step by step, self-contained tutorials
 
-For each code example I created a text based step-by-step documentation. Each guide was printed out for sessions and readers were encouraged to tackle them in any order. The extract outlining the use of physical maps above shows an example of a Roxanne(p) helping a Richie(c) find a code tutorial to follow based on child's interests. As the programme developed I took greater care over the form of the tutorials and started to collect them into a collection of chapters of an online book.
-
 <!-- BELOW Initially I structured the book chapter participants working their way through the online resources. HOW -->
-
 
 <!-- While writing self-contained tutorials added a challenge to the documentation authouring process, the documents, especially when printed became a vital resource for this community. In chapter 5 I explore the extent to which these resources can scale for use beyond this context. -->
 
-While prioritising a responsive, informal, hands-on approach over pre-teaching concepts, I struggled to resolve how best to provide background concepts and explanations of coding constructs, a need which had arisen from parents in the feedback to P1 (see appendix 4.x). However, as these tutorials took as a starting point the code of the starting template and did not attempt to explain that, they did not however resolve the issue of participants wanting resources that explained these core constructs and underlying concepts.
+In addition, for each code example I created descriptive step-by-step documentation which in P2 were developed into chapters of an online book [^12]. While prioritising an informal, hands-on approach over pre-teaching concepts, I struggled to resolve how best to provide background concepts and explanations of coding constructs. , a need which had arisen from parents in the feedback to P1 (see appendix 4.x).
+
+However, as these tutorials took as a starting point the code of the starting template and did not attempt to explain that, they did not however resolve the issue of participants wanting resources that explained these core constructs and underlying concepts.
 
 Thus I created opening chapters of the online manual which were more traditional in format and explained underlying concepts that the starting template had initially abstracted away from the participants. To describe the relationship between the self-contained chapters described above and the process of backtracking to gain foundational knowledge, I used the term _meeting yourself in the middle_. In the supporting chapters this term represented the value of retracing initial steps as a way to explore the computing concepts present in the design.
 
@@ -1391,7 +1391,7 @@ https://docs.google.com/document/d/1DRgpgIUfq5XIktYy-lX4WlviUDnffNc0v8SOeLGgHho/
 [^9]: https://mickfuzz.github.io/makecode-platformer-101/learningDimensions#change-listener
 [^10]: https://mickfuzz.github.io/makecode-platformer-101/learningDimensions#systems-dynamics
 [^11]: https://phaser.io/examples/v2
-[^12]:https://docs.google.com/document/d/1zUw4xpWT9p2LIqTaZdVN0JRpShvVFG3UQqmsxRriE6s/edit?pli=1 Example of code in google docs
+[^12]: https://en.flossmanuals.net/phaser-game-making-in-glitch/_full/
 [^17]: https://phaser.io/sandbox/templates
 [^18]: https://mozdevs.github.io/html5-games-workshop/en/guides/platformer/the-game-loop/
 [^19]: https://www.piskelapp.com
